@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/ncmpcpp
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/ncmpcpp/ChangeLog,v 1.16 2009/05/24 19:06:37 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/ncmpcpp/ChangeLog,v 1.17 2009/06/28 11:26:07 yngwin Exp $
+
+*ncmpcpp-0.3.5 (27 Jun 2009)
+
+  27 Jun 2009; Ben de Groot <yngwin@gentoo.org> +ncmpcpp-0.3.5.ebuild,
+  metadata.xml:
+  Version bump. Added iconv, outputs and threads useflags.
 
 *ncmpcpp-0.3.4 (19 May 2009)
 
